--- a/src/sass/app_2/_common/layout/layouts.scss
+++ b/src/sass/app_2/_common/layout/layouts.scss
@@ -1,31 +1,25 @@
 .app-contents {
     margin: $HEADER_HEIGHT 0 $FOOTER_HEIGHT;
     height: calc(100vh - #{$HEADER_HEIGHT} - #{$FOOTER_HEIGHT});
-    overflow: none;
+    overflow: hidden;
 
     &--show-positions-drawer {
-        .chart-container {
-            .cq-chart-controls {
-                left: $POSITIONS_DRAWER_WIDTH;
-                width: calc(100% - #{$POSITIONS_DRAWER_WIDTH});
-            }
-            .cq-top-ui-widgets {
-                transform: translate3d(#{$POSITIONS_DRAWER_WIDTH}, 0, 0);
+        .trade-container {
+            .chart-container {
+                width: calc(100% - #{$SIDEBAR_WIDTH * 2} - 18px);
+                margin-left: #{$SIDEBAR_WIDTH + 18px};
 
-                .info-box {
-                    transform: translate3d(-#{$POSITIONS_DRAWER_WIDTH}, 0, 0);
-                }
-            }
-            .cq-chart-control-left {
-                .cq-chart-controls {
-                    width: unset;
-                    transform: translate3d(10px, 0, 0) !important;
-                }
                 .cq-top-ui-widgets {
-                    left: 0;
+                    transform: translate3d(1px, 0, 0);
 
                     .info-box {
-                        transform: translate3d(-#{$POSITIONS_DRAWER_WIDTH}, 0, 0) !important;
+                        transform: translate3d(1px, 0, 0);
+                    }
+                }
+                .cq-chart-control-left {
+                    .cq-chart-controls {
+                        transform: translate3d(1px, 0, 0) !important;
+                        background: $COLOR_DARK_BLUE_3;
                     }
                 }
             }
@@ -33,7 +27,7 @@
     }
     .chart-container {
         width: 100%;
-        margin-left: -16px;
+        transition: width 0.15s ease-out, margin 0.15s ease-out;
 
         .cq-chart-control-left {
             .cq-chart-controls {
@@ -85,21 +79,21 @@
         }
         .contract-wrapper {
             position: absolute;
-            width: 100%;
+            width: $SIDEBAR_WIDTH;
             height: 100%;
             z-index: 2;
             top: 0;
-            left: 0;
+            right: 0;
             transition: transform 0.4s ease, opacity 0.2s linear;
             opacity: 1;
             transform: none;
 
             &-enter {
-                transform: translate3d(calc(100% + 20px), 0, 0);
+                transform: translate3d(calc(100% + 16px), 0, 0);
                 opacity: 0;
             }
             &-exit {
-                transform: translate3d(calc(100% + 20px), 0, 0);
+                transform: translate3d(calc(100% + 16px), 0, 0);
                 opacity: 0;
                 pointer-events: none;
             }
@@ -116,9 +110,9 @@
 /* trade-app layout */
 .trade-container {
     position: relative;
-    padding: 8px 12px 0;
+    padding: 16px 12px 0;
     display: flex;
-    min-height: calc(100vh - 91px);
+    min-height: calc(100vh - 99px);
     transition: transform 0.25s ease;
     will-change: transform;
 
@@ -126,6 +120,17 @@
         position: relative;
         width: 100%;
 
+        &:before {
+            content: '';
+            position: absolute;
+            height: 100%;
+            width: 20px;
+            top: 0;
+            left: -2px;
+            background-image: linear-gradient(to right, rgba(255, 255, 255, 1), rgba(255, 0, 0, 0));
+            pointer-events: none;
+            z-index: 2;
+        }
         // smartchart library style fixes
         .cq-context {
             top: 0;
@@ -147,13 +152,7 @@
                     z-index: 0;
                 }
             }
-            div.cq-chart-controls {
-                border-right: 1px solid $COLOR_LIGHT_BLACK_4;
-            }
             div.cq-chart-control-left {
-                .cq-chart-controls {
-                    border-top: 1px solid $COLOR_LIGHT_BLACK_4;
-                }
                 .cq-top-ui-widgets {
                     width: calc(100% - 90px);
                 }
