--- a/src/sass/app_2/_common/themes/dark.scss
+++ b/src/sass/app_2/_common/themes/dark.scss
@@ -34,6 +34,7 @@ body.dark, .theme-wrapper.dark {
         }
     }
     .app-contents {
+        background: $COLOR_DARK_BLUE_2;
         color: $COLOR_WHITE;
 
         fieldset {
@@ -215,13 +216,12 @@ body.dark, .theme-wrapper.dark {
         .chart-container {
             .cq-context {
                 div.cq-chart-controls {
-                    border: none;
-                    border-right: 1px solid $COLOR_DARK_BLUE_5;
-                    border-top: 1px solid $COLOR_DARK_BLUE_5;
-
                     @media (max-width: 768px) {
                         border: 1px solid $COLOR_DARK_BLUE_5;
                     }
+                }
+                .cq-chart-control-left .cq-chart-controls {
+                    background: $COLOR_DARK_BLUE_3;
                 }
             }
             .cq-modal-dropdown .cq-categorical-display .ic-icon.icon-close-menu {
@@ -230,6 +230,9 @@ body.dark, .theme-wrapper.dark {
                         fill: $COLOR_DARK_BLUE_7;
                     }
                 }
+            }
+            &:before {
+                background-image: linear-gradient(to right, rgba(16, 19, 32, 1), rgba(255, 0, 0, 0));
             }
         }
         .mobile-widget {
